2010-11-15  Agustín Martín  <agustin.martin@hispalinux.es>

	* textmodes/flyspell.el (flyspell-generic-progmode-verify):
	Make sure to check inside the word (Bug#6761).

2010-11-14  Chong Yidong  <cyd@stupidchicken.com>

	* startup.el (command-line): If the cursorColor resource is set,
	change the cursor face-spec (Bug#7392).

2010-11-13  Ken Manheimer  <ken.manheimer@gmail.com>

	The main features of the following allout.el changes are:
	- implement user customization for the allout key bindings
	- add a customization control by which the user can inhibit use of
	  a trailing Ctrl-H, so by default it's reserved for use with
	  describe-prefix-bindings
	- adapt to new version of called-interactively-p, while
	  maintaining backwards compatibility with old version
	- fix hotspot navigation so i works properly with meta-modified keys

	* allout.el (allout-keybindings, allout-bind-keys)
	(allout-keybindings-binding, allout-prefixed-keybindings)
	(allout-unprefixed-keybindings, allout-preempt-trailing-ctrl-h)
	(allout-keybindings-list, allout-mode-map-adjustments)
	(allout-setup-mode-map): Establish allout-mode keymaps as user
	customizable settings, and also establish a customizable setting which
	regulates whether or not a trailing control-h is reserved for use with
	describe-prefix-bindings - and inhibit it by default, so that control-h
	*is* reserved for describe-prefix-bindings unless the user changes it.

	* allout.el (allout-hotspot-key-handler): Distinguish more explicitly
	and accurately between modified and unmodified events, and handle
	modified events more comprehensively.

	* allout.el (allout-substring-no-properties):
	Alias to use or provide version of `substring-no-properties'.
	(allout-solicit-alternate-bullet): Use `allout-substring-no-properties'.

	* allout.el (allout-next-single-char-property-change):
	Alias to use or provide version of `next-single-char-property-change'.
	(allout-annotate-hidden, allout-hide-by-annotation):